--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/aminsoraya/asiatest",
+  "homepage": "https://github.com/aminsoraya/login",
   "name": "asia",
   "version": "0.1.0",
   "private": true,
