--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "http://github.com/aminsoraya/asiatest",
   "name": "asia",
   "version": "0.1.0",
+  "homepage": "https://aminsoraya.github.io/asiatest",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
